--- a/index.html
+++ b/index.html
@@ -1,10 +1,148 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Trolls Agency</title>
-  </head>
-  <body>
-    <h1>Bienvenue sur Trolls Agency !</h1>
-  </body>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Trolls Agency - Agence TikTok</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0d0d0d;
+      color: white;
+    }
+
+    header {
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #111;
+      border-bottom: 1px solid #222;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+      font-weight: bold;
+      color: #ff2ccb;
+    }
+
+    nav a {
+      margin-left: 20px;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 120px 20px;
+      background: linear-gradient(135deg, #ff2ccb, #7820ff);
+    }
+
+    .hero h2 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 20px;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 30px;
+      background: white;
+      color: #111;
+      padding: 15px 25px;
+      border-radius: 8px;
+      font-size: 18px;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .section {
+      padding: 80px 40px;
+      max-width: 1000px;
+      margin: 0 auto;
+      text-align: center;
+    }
+
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+      margin-top: 40px;
+    }
+
+    .card {
+      background: #161616;
+      padding: 30px;
+      border-radius: 10px;
+      border: 1px solid #222;
+      text-align: left;
+    }
+
+    .card h3 {
+      margin-top: 0;
+      color: #ff2ccb;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #111;
+      color: #777;
+      margin-top: 60px;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Trolls Agency</h1>
+  <nav>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <h2>La nouvelle génération d'agences TikTok</h2>
+  <p>Nous créons, optimisons et gérons votre présence TikTok pour exploser votre croissance et attirer des clients à grande échelle.</p>
+  <a href="#contact" class="btn">Travailler avec nous</a>
+</section>
+
+<section class="section" id="services">
+  <h2>Nos Services</h2>
+  <div class="services">
+    <div class="card">
+      <h3>Création de Contenu</h3>
+      <p>Idées, scripts, tournage, montage, trends... Nous gérons tout pour vous garantir des vidéos virales.</p>
+    </div>
+    <div class="card">
+      <h3>Gestion de Compte</h3>
+      <p>Nous publions, analysons et optimisons votre compte TikTok pour maximiser visibilité et conversions.</p>
+    </div>
+    <div class="card">
+      <h3>Stratégie TikTok</h3>
+      <p>Analyse du marché, positionnement, branding et stratégie complète pour vous démarquer.</p>
+    </div>
+  </div>
+</section>
+
+<section class="section" id="contact">
+  <h2>Contact</h2>
+  <p>Envie de travailler avec nous ? Envoyez un message : </p>
+  <p style="font-size: 22px; margin-top: 20px; color: #ff2ccb;">contact@trollsagency.com</p>
+</section>
+
+<footer>
+  © 2025 Trolls Agency — Tous droits réservés
+</footer>
+
+</body>
 </html>
