--- a/index.html
+++ b/index.html
@@ -1,148 +1,190 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Trolls Agency - Agence TikTok</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0d0d0d;
-      color: white;
-    }
-
-    header {
-      padding: 20px 40px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: #111;
-      border-bottom: 1px solid #222;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 24px;
-      font-weight: bold;
-      color: #ff2ccb;
-    }
-
-    nav a {
-      margin-left: 20px;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .hero {
-      text-align: center;
-      padding: 120px 20px;
-      background: linear-gradient(135deg, #ff2ccb, #7820ff);
-    }
-
-    .hero h2 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-
-    .hero p {
-      font-size: 20px;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    .btn {
-      display: inline-block;
-      margin-top: 30px;
-      background: white;
-      color: #111;
-      padding: 15px 25px;
-      border-radius: 8px;
-      font-size: 18px;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    .section {
-      padding: 80px 40px;
-      max-width: 1000px;
-      margin: 0 auto;
-      text-align: center;
-    }
-
-    .services {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
-      margin-top: 40px;
-    }
-
-    .card {
-      background: #161616;
-      padding: 30px;
-      border-radius: 10px;
-      border: 1px solid #222;
-      text-align: left;
-    }
-
-    .card h3 {
-      margin-top: 0;
-      color: #ff2ccb;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #111;
-      color: #777;
-      margin-top: 60px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Content Manager - Plateforme Créateurs</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <!-- Sidebar Navigation -->
+        <nav class="sidebar">
+            <div class="logo">
+                <i class="fas fa-video"></i>
+                <span>Content Manager</span>
+            </div>
+            <ul class="nav-links">
+                <li class="nav-item active">
+                    <a href="#dashboard">
+                        <i class="fas fa-home"></i>
+                        <span>Tableau de bord</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#videos">
+                        <i class="fas fa-play-circle"></i>
+                        <span>Mes vidéos</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#analytics">
+                        <i class="fas fa-chart-bar"></i>
+                        <span>Analytiques</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#comments">
+                        <i class="fas fa-comments"></i>
+                        <span>Commentaires</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#followers">
+                        <i class="fas fa-users"></i>
+                        <span>Abonnés</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#upload">
+                        <i class="fas fa-upload"></i>
+                        <span>Publier</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
 
-<header>
-  <h1>Trolls Agency</h1>
-  <nav>
-    <a href="#services">Services</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
+        <!-- Main Content -->
+        <main class="main-content">
+            <!-- Header -->
+            <header class="header">
+                <div class="search-bar">
+                    <i class="fas fa-search"></i>
+                    <input type="text" placeholder="Rechercher...">
+                </div>
+                <div class="user-profile">
+                    <img src="https://via.placeholder.com/40" alt="Profile" class="profile-pic">
+                    <span>Créateur</span>
+                </div>
+            </header>
 
-<section class="hero">
-  <h2>La nouvelle génération d'agences TikTok</h2>
-  <p>Nous créons, optimisons et gérons votre présence TikTok pour exploser votre croissance et attirer des clients à grande échelle.</p>
-  <a href="#contact" class="btn">Travailler avec nous</a>
-</section>
+            <!-- Dashboard Section -->
+            <section id="dashboard" class="section active">
+                <div class="stats-grid">
+                    <div class="stat-card">
+                        <div class="stat-icon">
+                            <i class="fas fa-eye"></i>
+                        </div>
+                        <div class="stat-info">
+                            <h3>Vues totales</h3>
+                            <p class="stat-number">1.2M</p>
+                            <span class="stat-change positive">+12%</span>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon">
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <div class="stat-info">
+                            <h3>Abonnés</h3>
+                            <p class="stat-number">45.8K</p>
+                            <span class="stat-change positive">+5%</span>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <div class="stat-info">
+                            <h3>J'aime</h3>
+                            <p class="stat-number">256K</p>
+                            <span class="stat-change positive">+8%</span>
+                        </div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-icon">
+                            <i class="fas fa-share"></i>
+                        </div>
+                        <div class="stat-info">
+                            <h3>Partages</h3>
+                            <p class="stat-number">18.4K</p>
+                            <span class="stat-change positive">+15%</span>
+                        </div>
+                    </div>
+                </div>
 
-<section class="section" id="services">
-  <h2>Nos Services</h2>
-  <div class="services">
-    <div class="card">
-      <h3>Création de Contenu</h3>
-      <p>Idées, scripts, tournage, montage, trends... Nous gérons tout pour vous garantir des vidéos virales.</p>
+                <div class="recent-videos">
+                    <h2>Vidéos récentes</h2>
+                    <div class="video-grid">
+                        <!-- Les vidéos seront ajoutées dynamiquement ici -->
+                    </div>
+                </div>
+            </section>
+
+            <!-- Videos Section -->
+            <section id="videos" class="section">
+                <div class="section-header">
+                    <h2>Mes Vidéos</h2>
+                    <button class="btn-primary" id="uploadBtn">
+                        <i class="fas fa-plus"></i>
+                        Nouvelle vidéo
+                    </button>
+                </div>
+                <div class="videos-container">
+                    <!-- Les vidéos seront affichées ici -->
+                </div>
+            </section>
+
+            <!-- Analytics Section -->
+            <section id="analytics" class="section">
+                <h2>Analytiques</h2>
+                <div class="analytics-charts">
+                    <div class="chart-container">
+                        <canvas id="viewsChart"></canvas>
+                    </div>
+                    <div class="chart-container">
+                        <canvas id="engagementChart"></canvas>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Upload Modal -->
+            <div id="uploadModal" class="modal">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3>Publier une nouvelle vidéo</h3>
+                        <span class="close">&times;</span>
+                    </div>
+                    <div class="modal-body">
+                        <div class="upload-area" id="uploadArea">
+                            <i class="fas fa-cloud-upload-alt"></i>
+                            <p>Glissez-déposez votre vidéo ici ou</p>
+                            <button class="btn-secondary">Choisir un fichier</button>
+                            <input type="file" id="videoFile" accept="video/*" hidden>
+                        </div>
+                        <div class="video-info" style="display: none;" id="videoInfo">
+                            <div class="form-group">
+                                <label for="videoTitle">Titre</label>
+                                <input type="text" id="videoTitle" placeholder="Ajouter un titre...">
+                            </div>
+                            <div class="form-group">
+                                <label for="videoDescription">Description</label>
+                                <textarea id="videoDescription" placeholder="Ajouter une description..."></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="videoTags">Tags</label>
+                                <input type="text" id="videoTags" placeholder="Ajouter des tags...">
+                            </div>
+                            <button class="btn-primary" id="publishBtn">Publier</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
-    <div class="card">
-      <h3>Gestion de Compte</h3>
-      <p>Nous publions, analysons et optimisons votre compte TikTok pour maximiser visibilité et conversions.</p>
-    </div>
-    <div class="card">
-      <h3>Stratégie TikTok</h3>
-      <p>Analyse du marché, positionnement, branding et stratégie complète pour vous démarquer.</p>
-    </div>
-  </div>
-</section>
 
-<section class="section" id="contact">
-  <h2>Contact</h2>
-  <p>Envie de travailler avec nous ? Envoyez un message : </p>
-  <p style="font-size: 22px; margin-top: 20px; color: #ff2ccb;">contact@trollsagency.com</p>
-</section>
-
-<footer>
-  © 2025 Trolls Agency — Tous droits réservés
-</footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
